# ClinicOS-backend

./: .env.example  Makefile  README.md  demo_api.py  demo_api.sh  docker-compose.yml  env.example  langgraph_simple_thinker.ipynb  mongo-init.js  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  deps.py  main.py
app/middleware/: errors.py  security_headers.py
app/models/: __init__.py  base.py  refresh_token.py  reset_token.py  token.py  user.py
app/repositories/: __init__.py  refresh_repo.py  reset_repo.py  token_repo.py  user_repo.py
app/routes/: auth_routes.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  crypto_service.py  email_service.py  jwt_service.py
app/utils/: responses.py
data/: clinic_auth.db
tests/: requests.http
